2022-01-09  1.07  (Phil M Perry)   UNRELEASED

  tools/*.pl, lib/Text/KnuthPlass.pm
   Change "my $LAST_UPDATE" to "our $LAST_UPDATE" so info available to a
    program.

  README.md, lib/Text/KnuthPlass.pm
   2022 copyright

  lib/Text/KnuthPlass.xs 
   Fix compiler warnings (#8).

  In examples, change lead() to leading() per PDF::API2 and PDF::Builder.

  Update build process to ensure that all human-readable files are "unix"
   format and not MS-DOS (CRLF) format on line-ends. Some non-CPAN packagers
   are complaining about the mixed line-end formats.

2021-02-12  1.06  (Phil M Perry)

  lib/Text/KnuthPlass.pm, lib/Text/KnuthPlass.xs
   Minor fix to properly index line length list on longer paragraphs.

  Build.PL
   Add resources for repository and bugtracker (point to GitHub).

  tools/pod2cpanhtml.pl, INFO/kp.html, MANIFEST, .github/workflows/test.yml
   Let's see if Continuous Integration is any happier with this HTML produced
    by a more up-to-date tool. No, but try excluding kp.html from lint.

  README.md, INFO/kp.html, lib/Text/KnuthPlass.pm, MANIFEST
   2021 copyright. NOT archiving Changes, yet. kp.html moved to INFO/.

  MANIFEST, kp.html, RoadMap, .gitignore, lib/Text/KnuthPlass.pm
   Ship documentation (POD) kp.html (also on GitHub). 
    Roadmap/discussions/thoughts (RoadMap) in public on GitHub (Read-Only).

2020-12-29  1.05  (Phil M Perry)

  examples/KP.pl
   Fix superfluous hyphen when splitting at an existing hyphen. It is not clear
    whether this is the best practice, or that it would be better to handle
    this "upstream" in KnuthPlass.pm. Also, other hyphens and dashes do not
    seem to be well handled.

  META.yml, README.md
   Clean up support-related email addresses and pages.

  README.md  remove example code (is still found in examples/KP.pl) to 
    shorten this file to a reasonable length.

  META.yml
   Add repository (GitHub) and bugtracker (GitHub) entries. Want to cut over