@@ -16,5 +16,5 @@ tools/1_pc.pl
 tools/2_t-tests.pl
 tools/3_examples.pl
 tools/pod2cpanhtml.pl
-examples/KP.pl
+examples/PDF/KP.pl
 META.yml
